tests/snapshots/run_file__nested_let_tup.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/nested_let_tup.hvm
---
Lazy mode:
2

Strict mode:
2
