tests/snapshots/run_file__nested_map_get.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/nested_map_get.bend
---
NumScott:
84

Scott:
84
