tests/snapshots/run_file__nested_map_set.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/nested_map_set.bend
---
NumScott:
*

Scott:
*
