tests/snapshots/run_file__nested_str.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/nested_str.bend
---
((String/Cons "a" ""), (λa λ* (a 97 λb λ* (b "bc" "")), (λe λ* (e "ab" "c"), λi λ* (i "ab" λl λ* (l "cd" "")))))
