tests/snapshots/run_file__nested_str.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/nested_str.hvm
---
(((String.cons "a" String.nil), (String.cons 97 (String.cons "bc" String.nil))), ((String.cons "ab" "c"), (String.cons "ab" (String.cons "cd" String.nil))))
